--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,5 @@ downloadcache = .tox/_download/
 
 [testenv]
 commands =
+    pip install -r requirements.txt
     make test
-deps =
-    django>=1.4
-    django-nose==0.1.3
-    coverage>=3.4
-    tablib==0.9.11
-    celery==3.0.9
-    django-celery==3.0.9
-    flake8
-    mock
